--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "luketap",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://imlucatoo.github.io",
   "dependencies": {
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@testing-library/jest-dom": "^5.17.0",
